crates/ars-components/src/data_display/tag_group/snapshots/ars_components__data_display__tag_group__tests__tag_group_list.snap
---
source: crates/ars-components/src/data_display/tag_group/mod.rs
expression: snapshot_attrs(&api.list_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "list",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tag-group",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "tags-label",
            ),
        ),
        (
            Role,
            String(
                "row",
            ),
        ),
    ],
    styles: [],
}
