crates/ars-components/src/data_display/tag_group/snapshots/ars_components__data_display__tag_group__tests__tag_group_remove_enabled.snap
---
source: crates/ars-components/src/data_display/tag_group/mod.rs
expression: "snapshot_attrs(&api.tag_remove_attrs(&key(\"alpha\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "tag-remove",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tag-group",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Remove",
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
