crates/ars-components/src/data_display/tag_group/snapshots/ars_components__data_display__tag_group__tests__tag_group_tag_disabled.snap
---
source: crates/ars-components/src/data_display/tag_group/mod.rs
expression: "snapshot_attrs(&api.tag_attrs(&key(\"beta\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-key",
            ),
            String(
                "beta",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "tag",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tag-group",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "false",
            ),
        ),
        (
            Role,
            String(
                "gridcell",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
