crates/ars-components/src/data_display/tag_group/snapshots/ars_components__data_display__tag_group__tests__tag_group_tag_focused_selected.snap
---
source: crates/ars-components/src/data_display/tag_group/mod.rs
expression: "snapshot_attrs(&api.tag_attrs(&key(\"alpha\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-key",
            ),
            String(
                "alpha",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "tag",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tag-group",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "true",
            ),
        ),
        (
            Role,
            String(
                "gridcell",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
